# spans

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  api.html  benchmark.py  changelog.html  custom_types.html  example_contains.inc.html  genindex.html  index.html  introduction.html  objects.inv  postgresql.html  py-modindex.html  pyproject.toml  ranges.html  recipe_overlap.inc.html  recipes.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  tox.ini
.doctrees/: api.doctree  changelog.doctree  custom_types.doctree  environment.pickle  example_contains.inc.doctree  index.doctree  introduction.doctree  postgresql.doctree  ranges.doctree  recipe_overlap.inc.doctree  recipes.doctree
.github/workflows/: ci.yml
_sources/: api.rst.txt  example_contains.inc.rst.txt  introduction.rst.txt  recipes.rst.txt
doc/: Makefile  api.rst  changelog.rst  conf.py  conftest.py  custom_types.rst  example_contains.inc.rst  index.rst  introduction.rst  postgresql.rst  ranges.rst  recipe_overlap.inc.rst
spans/: __init__.py  _compat.py  _utils.py  settypes.py  types.py
spans/tests/: __init__.py  test_settypes.py  test_types.py
tests/: test_compat.py  test_daterange.py  test_discreterange.py  test_floatrange.py  test_intrange.py  test_offsetablerange.py  test_periodrange.py  test_range.py  test_rangeset.py  test_strrange.py  test_typeddaterange.py  test_utils.py
